# tiny-entities

./: .env.example  .gitignore  QUICKSTART.md  README.md  ROADMAP.md  demo.py  pyproject.toml  run_setup.sh  setup_structure.sh  setup_uv.sh  test_minimal.py
.github/: copilot-instructions.md
config/: README.md  api_config.py  better_vis.yaml  default.yaml  experiment_social.yaml  large.yaml  simulation_config.py  small.yaml
docs/: COMPREHENSIVE_PROJECT_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MODEL_UPDATE.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_COMPLETE.md  PROJECT_ANALYSIS_SUMMARY.md  README.md  REVIEW_SUMMARY.md  VISUALIZATION.md
examples/: analysis_example.py  analysis_with_plots.py  basic_simulation.py  headless_visualization.py
examples/legacy/: README.md
src/: __init__.py  __main__.py  cli.py
src/config/: api_config.py  config_schema.py  llm_client.py  logging_config.py  model_pricing.py
src/creatures/: __init__.py  action_selection.py  brain.py  factory.py  mood_system.py
src/emergence/: __init__.py  music_analyzer.py
src/little_social_dreamers/: main.py
src/simulation/: __init__.py  analyzer.py  data_collector.py  engine.py  main_loop.py  orchestrator.py  visualization.py
src/tiny_entities/: __init__.py
src/web/: __init__.py  server.py
src/world/: __init__.py  non_deterministic.py  physics.py  (+2 more)
temp/: setup-instructions.md  setup.md  tiny-entities-additional.py  tiny-entities-project.txt
tests/: test_config.py  test_creatures.py  test_sound_engine.py  test_visualization.py  test_world.py
(+14 files in other folders)
