[project]
name = "little_social_dreamers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "huggingface>=0.0.1",
    "numpy>=2.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.48.2",
]

[project.scripts]
lsd-cli = "little_social_dreamers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
