[project]
name = "tiny-entities"
version = "0.1.0"
description = "Emergent artificial life simulation with mood-based cognition"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.6.0",
    "pygame>=2.5.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "huggingface-hub>=0.19.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
tiny-entities = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-watch",
    "black",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
